feat(homepage): show available endpoints

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,6 +5,12 @@
     <title>API Manual</title>
 </head>
 <body>
-<p>Hi here you can see our API's manual!</p>
+<h1>Hi here you can see our API's manual!</h1>
+<h2>Available endpoints:</h2>
+<ul>
+    <li>
+        <p>/hearthbeat method: get</p>
+    </li>
+</ul>
 </body>
 </html>
