chore(yondu): template

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -11,6 +11,9 @@
     <li>
         <p>/hearthbeat method: get</p>
     </li>
+    <li>
+        <p>/yondu method: get</p>
+    </li>
 </ul>
 </body>
 </html>
