fix(heartbeat): typo in every instance

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -9,7 +9,7 @@
 <h2>Available endpoints:</h2>
 <ul>
     <li>
-        <p>/hearthbeat method: get</p>
+        <p>/heartbeat method: get</p>
     </li>
     <li>
         <p>/yondu method: get</p>
